@@ -1,3 +1,11 @@
+Sun Apr  2 16:59:23 MST 2006  Christian Persch <chpe@gnome.org>
+
+	* src/fe-gnome/util.c:
+	* src/fe-gnome/fe-gnome.c:
+	* data/xchat-gnome.glade:
+	  - Use GtkMessageDialog rather than a custom one for showing errors.
+	    (#336920)
+
 Sun Apr  2 15:31:51 CEST 2006  Christian Persch <chpe@gnome.org>
 
 	* data/setup-dialog.glade:
